# model_catalogs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  conda-requirements-dev.txt  conda-requirements-opt.txt  conda-requirements.txt  environment.yml  pull_request_template.md  pyproject.toml  setup.cfg  setup.py
model_catalogs/: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  conda_requirements.txt  conda_requirements_test.txt  environment.yml  model_catalogs.py  pip-requirements.txt  pip_requirements.txt  process.py  pull_request_template.md  pyproject.toml  setup.cfg  setup.py  utils.py
model_catalogs/.github/workflows/: test.yaml
model_catalogs/catalogs/boundaries/: cbofs.yaml  ciofs-rgrid.yaml  dbofs-rgrid.yaml  gfs-1deg.yaml  gofs.yaml  gomofs-2ds.yaml  leofs.yaml  lmhofs-regulargrid.yaml  loofs-fvcom.yaml  lsofs-fvcom.yaml  ngofs2-2ds.yaml  rtofs-ak.yaml  rtofs-east.yaml  rtofs-west.yaml  sfbofs.yaml  tbofs-rgrid.yaml  wcofs.yaml
model_catalogs/catalogs/orig/: cbofs-regulargrid.yaml  cbofs-rgrid.yaml  cbofs.yaml  ciofs-regulargrid.yaml  ciofs-rgrid.yaml  ciofs.yaml  creofs-regulargrid.yaml  creofs-rgrid.yaml  creofs.yaml  dbofs-regulargrid.yaml  dbofs-rgrid.yaml  dbofs.yaml  gfs-1-2deg.yaml  gfs-1-4deg.yaml  gfs-1deg.yaml  gofs.yaml  gomofs-2ds.yaml  gomofs-regulargrid.yaml  gomofs-rgrid.yaml  gomofs.yaml  hycom.yaml  leofs-regulargrid.yaml  leofs-rgrid.yaml  leofs.yaml  lmhofs-regulargrid.yaml  lmhofs-rgrid.yaml  lmhofs.yaml  loofs-fvcom.yaml  loofs.yaml  lsofs-fvcom.yaml  lsofs.yaml  ngofs2-2ds.yaml  ngofs2-regulargrid.yaml  ngofs2-rgrid.yaml  ngofs2.yaml  nyofs.yaml  rtofs-2d.yaml  rtofs-ak.yaml  rtofs-alaska.yaml  rtofs-east.yaml  (+14 more)
model_catalogs/catalogs/source_catalogs/orig/: ref_cbofs.yaml  ref_ciofs.yaml  ref_creofs.yaml  ref_dbofs.yaml  ref_gfs-1_4deg.yaml  ref_gfs-1deg.yaml  ref_gomofs.yaml  ref_hycom.yaml  ref_leofs.yaml  ref_lmhofs.yaml  ref_loofs.yaml  ref_lsofs.yaml  ref_ngofs2.yaml  ref_nyofs.yaml  ref_rtofs-east.yaml  ref_rtofs-global.yaml  ref_rtofs-west.yaml  ref_sfbofs.yaml  ref_tbofs.yaml  ref_wcofs.yaml
model_catalogs/ci/: environment-py3.7.yml  environment-py3.8.yml  environment-py3.9.yml
model_catalogs/docs/: subsetting.ipynb
model_catalogs/model_catalogs/: __init__.py  examples.py  model_catalogs.py  process.py  utils.py
model_catalogs/model_catalogs/catalogs/: transform.yaml
model_catalogs/model_catalogs/catalogs/boundaries/: cbofs-regulargrid.yaml  ciofs.yaml  creofs.yaml  creofs_regulargrid.yaml  dbofs.yaml  gfs-1-2deg.yaml  gfs-1-4deg.yaml  gomofs-regulargrid.yaml  leofs-regulargrid.yaml  lmhofs.yaml  loofs.yaml  lsofs.yaml  ngofs2-regulargrid.yaml  nyofs.yaml  rtofs-global-2d.yaml  sfbofs-regulargrid.yaml  tbofs.yaml  wcofs-regulargrid.yaml
model_catalogs/model_catalogs/catalogs/complete/: cbofs.yaml  cbofs_regulargrid.yaml  ciofs.yaml  ciofs_regulargrid.yaml  creofs.yaml  creofs_regulargrid.yaml  dbofs.yaml  dbofs_regulargrid.yaml  gfs-1_2deg.yaml  gfs-1_4deg.yaml  gfs-1deg.yaml  gomofs.yaml  gomofs_2ds.yaml  gomofs_regulargrid.yaml  hycom.yaml  leofs.yaml  leofs_regulargrid.yaml  lmhofs.yaml  lmhofs_regulargrid.yaml  loofs.yaml  lsofs.yaml  ngofs2.yaml  ngofs2_2ds.yaml  ngofs2_regulargrid.yaml  nyofs.yaml  rtofs-alaska.yaml  rtofs-east.yaml  rtofs-global.yaml  rtofs-global_2d.yaml  rtofs-west.yaml  sfbofs.yaml  sfbofs_regulargrid.yaml  tbofs.yaml  tbofs_regulargrid.yaml  wcofs.yaml  wcofs_2ds.yaml  wcofs_regulargrid.yaml
model_catalogs/model_catalogs/catalogs/orig/: cbofs-regulargrid.yaml  cbofs.yaml  cbofs_regulargrid.yaml  ciofs-regulargrid.yaml  ciofs.yaml  ciofs_regulargrid.yaml  creofs-regulargrid.yaml  creofs.yaml  creofs_regulargrid.yaml  dbofs-regulargrid.yaml  dbofs.yaml  dbofs_regulargrid.yaml  gfs-1-2deg.yaml  gfs-1-4deg.yaml  gfs-1_2deg.yaml  gfs-1_4deg.yaml  gfs-1deg.yaml  gomofs-2ds.yaml  gomofs-regulargrid.yaml  gomofs.yaml  gomofs_2ds.yaml  gomofs_regulargrid.yaml  hycom.yaml  leofs-regulargrid.yaml  leofs.yaml  leofs_regulargrid.yaml  lmhofs-regulargrid.yaml  lmhofs.yaml  lmhofs_regulargrid.yaml  loofs.yaml  lsofs.yaml  ngofs2-2ds.yaml  ngofs2-regulargrid.yaml  ngofs2.yaml  ngofs2_2ds.yaml  ngofs2_regulargrid.yaml  nyofs.yaml  rtofs-alaska.yaml  rtofs-east.yaml  rtofs-global-2d.yaml  (+14 more)
model_catalogs/model_catalogs/catalogs/source_catalogs/: transform.yaml
model_catalogs/model_catalogs/docs/: demo.ipynb  standard_names.rst
model_catalogs/model_catalogs/notebooks/: demo.ipynb  subsetting.ipynb
model_catalogs/model_catalogs/tests/: conftest.py  test_catalogs.py  test_examples.py  test_process.py  test_unstructured.py
model_catalogs/model_catalogs/tests/test_files/: cbofs_hindcast.nc  cbofs_nowcast.nc  cbofs_regulargrid_forecast.nc  ciofs_hindcast-forecast-aggregation.nc  ciofs_hindcast.nc  ciofs_nowcast.nc  ciofs_regulargrid_forecast.nc  creofs_regulargrid_forecast.nc  dbofs_hindcast-forecast-aggregation.nc  dbofs_hindcast.nc  dbofs_nowcast.nc  dbofs_regulargrid_forecast.nc  gfs-1_2deg_forecast.nc  gfs-1_4deg_forecast.nc  gfs-1deg_forecast.nc  gomofs_2ds_forecast.nc  gomofs_2ds_hindcast.nc  gomofs_hindcast-forecast-aggregation.nc  gomofs_hindcast.nc  gomofs_nowcast.nc  gomofs_regulargrid_forecast.nc  hycom_forecast.nc  leofs_regulargrid_forecast.nc  lmhofs_regulargrid_forecast.nc  loofs_hindcast-forecast-aggregation.nc  loofs_hindcast.nc  loofs_nowcast.nc  lsofs_hindcast-forecast-aggregation.nc  lsofs_hindcast.nc  lsofs_nowcast.nc  ngofs2_regulargrid_forecast.nc  nyofs_hindcast.nc  (+12 more)
model_catalogs/notebooks/: demo.ipynb
model_catalogs/tests/: conftest.py  test_catalog_inputs.py  test_catalogs.py  test_process.py
model_catalogs/tests/test_files/: cbofs_hindcast.nc  ciofs_hindcast-forecast-aggregation.nc  ciofs_hindcast.nc  ciofs_regulargrid_forecast.nc  creofs_regulargrid_forecast.nc  gfs-1_4deg_forecast.nc  gomofs_hindcast.nc  lmhofs_regulargrid_forecast.nc  loofs_nowcast.nc  lsofs_hindcast.nc  lsofs_nowcast.nc  nyofs_nowcast.nc  sfbofs_regulargrid_forecast.nc  tbofs_regulargrid_forecast.nc  wcofs_2ds_forecast.nc  wcofs_forecast.nc  wcofs_regulargrid_forecast.nc
(+70 files in other folders)
