[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# [tool.setuptools_scm]
# write_to = "model_catalogs/model_catalogs/_version.py"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.isort]
known_third_party = ["appdirs", "cf_xarray", "dask", "datetimerange",
                     "intake", "intake-xarray", "mc-goods", "netcdf4",
                     "numpy", "pandas", "pip", "requests",
                     "setuptools", "siphon", "xarray"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = [
    "model_catalogs/tests",
]
