[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = model_catalogs/_version.py


[metadata]
name = model_catalogs
description = Catalogs for known models
author = Kristen Thyng
url = https://github.com/NOAA-ORR-ERD/model_catalogs
long_description = file: README.md
long_description_content_type = text/markdown
license = NOAA/Government license
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    # Don't change this one
    License :: OSI Approved :: NOAA License

## Add your email here
author_email = kristen@axds.co


### make sure to fill in your dependencies!
[options]
include_package_data = True
install_requires =
  #  pytest
#    alphashape
    appdirs
    cf_xarray
    dask
    datetimerange
#   extract_model
    h5netcdf
  # - intake
  # - intake-xarray
  #  flake8
  #  ipython
  #  jupyter
  #  jupyterlab
  #  matplotlib
    numpy
    pandas
    pip
#    pyproj
#    shapely
    xarray
setup_requires=
    setuptools_scm
python_requires = >=3.7

[options.package_data]
# Include any *.yaml files found in the "model_catalogs.catalogs" package:
model_catalogs.catalogs = *.yaml


################ Up until here

zip_safe = False
packages = find:
